--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="assets/fastmonkeys.css">
     <script src="https://code.jquery.com/jquery-1.11.1.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hogan.js/3.0.0/hogan.js" type="text/javascript"></script>
   </head>
   <body>
+    <div id="repoTemplate" class="template">
+      <div>test</div>
+      {{name}}
+      test
+    </div>
+
     <script>
-      $(
-        function () {
+
+      $(function () {
+          var repoTemplate = $("div#repoTemplate").html();
+          console.log(repoTemplate);
           $.getJSON('https://api.github.com/users/kvesteri/repos?', function(data) {
             console.log(data);
           });
